--- a/amazon/templates/store/product_list.html
+++ b/amazon/templates/store/product_list.html
@@ -1,6 +1,15 @@
-<center><h1>PRODUCTS</h1></center>
+
+
+
+{% load static %}
+<link rel="stylesheet" href="{% static 'amazon/style.css' %}">
+
+
+<center><h1>Products</h1></center>
 {% for product in products %}
 <div>
+
+    <img src="{{ product.image.url }}" width="200">
     <h3>{{product.name}}</h3>
     <p>PRICE: ${{ product.price }}</p>
     <a href="{% url 'product_detail' product.id %}">VIEW</a>
