--- a/amazon/static/amazon/style.css
+++ b/amazon/static/amazon/style.css
@@ -15,6 +15,9 @@ div {
     border: 1px solid white;
     display: inline-block;
     text-align: center;  
+    vertical-align: top;        
+    box-sizing: border-box; 
+    
 }
 
 
