--- a/amazon/templates/store/cart.html
+++ b/amazon/templates/store/cart.html
@@ -1,18 +1,35 @@
-<center><h1>CART</h1></center>
-{% if cart_items %}
-    {% for item in cart_items %}
-        <h3>{{ item.product.price}}</h3>
-        <p>Price:{{ item.product.price}}</p>
-        <p>Quantity:{{ item.quantity}}</p>
-        <p>Total:{{ item.total }}</p>
+{% extends 'base.html' %}
+{% load static %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>CART</title>
+    <link rel="stylesheet" href="{% static 'hello.css' %}?v=2">
+</head>
+<body>
+   
+    {% block content %}
+    <h1>CART</h1>
 
-        <a href="{% url 'increase' item.product.id %}">+</a>
-        <a href="{% url 'decrease' item.product.id %}">-</a>
-        <a href="{% url 'remove' item.product.id %}">Remove</a>
-    {% endfor %}
-    <h2>Total : {{ final_amount }} </h2>
-{% else %}
-        <p>cart is empty!</p>
-{% endif %}
-<a href="{% url 'product_list' %}"> continue shopping..</a>
+    {% if cart_items %}
+        {% for item in cart_items %}
+            <div>
+                <h3>{{ item.product.name }}</h3>
+                <p>Price: {{ item.product.price }}</p>
+                <p>Quantity: {{ item.quantity }}</p>
+                <p>Total: {{ item.total }}</p>
+                <a href="{% url 'increase' item.product.id %}">+</a>
+                <a href="{% url 'decrease' item.product.id %}">-</a>
+                <a href="{% url 'remove' item.product.id %}">Remove</a>
+            </div>
+        {% endfor %}
 
+        <h2>TOTAL : {{ final_amount }}</h2>
+    {% else %}
+        <p>Cart is empty!</p>
+    {% endif %}
+
+    <a href="{% url 'product_list' %}">Continue Shopping</a>
+    {% endblock %}
+</body>
+</html>
