--- a/amazon/templates/store/product_list.html
+++ b/amazon/templates/store/product_list.html
@@ -1,17 +1,17 @@
-
-
-
+{% extends 'base.html' %}
 {% load static %}
+
+{% block content %}
 <link rel="stylesheet" href="{% static 'amazon/style.css' %}">
 
+<center><h1>Amazon</h1></center>
 
-<center><h1>Products</h1></center>
 {% for product in products %}
-<div>
-
-    <img src="{{ product.image.url }}" width="200">
-    <h3>{{product.name}}</h3>
-    <p>PRICE: ${{ product.price }}</p>
-    <a href="{% url 'product_detail' product.id %}">VIEW</a>
-</div>
+    <div class="products">
+        <img src="{{ product.image.url }}" width="200">
+        <h3>{{ product.name }}</h3>
+        <p>PRICE: ${{ product.price }}</p>
+        <a href="{% url 'product_detail' product.id %}">VIEW</a>
+    </div>
 {% endfor %}
+{% endblock %}
