--- a/amazon/templates/store/product_detail.html
+++ b/amazon/templates/store/product_detail.html
@@ -1,15 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html>
-<head>
-    <title>{{ product.name }}</title>
-    <link rel="stylesheet" href="{% static 'hello.css' %}">
-</head>
-<body>
-<div>
-    
+
     {% block content %}
+     <link rel="stylesheet" href="{% static 'amazon/style.css' %}">
+
+<div class="product-detail">
+    
     <h2>{{ product.name }}</h2>
     {% if product.image %}
         <img src="{{ product.image.url }}" alt="{{ product.name }}">
@@ -17,7 +13,6 @@
     <p>{{ product.description }}</p>
     <p>Price: {{ product.price }}</p>
     <a href="{% url 'add_to_cart' product.id %}">ADD TO CART</a>
-    {% endblock %}
+   
 </div>
-</body>
-</html>
+ {% endblock %}
