--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,8 @@
 <body>
     <nav>
         <a href="{% url 'product_list' %}">HOME</a>
-        {% if user.is_authenticated %}
-            Welcome {{ user.username }}
+        {% if user.is_authenticated %}<center>
+            Welcome {{ user.username }}</center>
             <a href="{% url 'view_cart' %}">CART</a>
             <a href="{% url 'logout' %}">LOGOUT</a>
         {% else %}
